--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 aiofiles==0.4.0
+aiohttp==3.5.4
 aniso8601==7.0.0
+async-timeout==3.0.1
+attrs==19.1.0
 certifi==2019.6.16
 chardet==3.0.4
 h11==0.8.1
@@ -24,3 +27,4 @@ urllib3==1.25.3
 uvloop==0.12.2
 websockets==6.0
 Werkzeug==0.15.4
+yarl==1.3.0
