--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,11 @@ httpcore==0.3.0
 httptools==0.0.13
 hyperframe==5.2.0
 idna==2.8
+marshmallow==2.19.5
+marshmallow-dataclass==0.6.6
 motor==2.0.0
 multidict==4.5.2
+mypy-extensions==0.4.1
 pymongo==3.8.0
 pytz==2019.1
 requests==2.22.0
@@ -22,6 +25,7 @@ rfc3986==1.3.2
 sanic==19.6.0
 sanic-motor==0.3.4
 sanic-restful==0.0.8
+typing-inspect==0.4.0
 ujson==1.35
 urllib3==1.25.3
 uvloop==0.12.2
