--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,9 @@ requests==2.22.0
 requests-async==0.5.0
 rfc3986==1.3.2
 sanic==19.6.0
+Sanic-Cors==0.9.8.post1
 sanic-motor==0.3.4
+Sanic-Plugins-Framework==0.7.0
 sanic-restful==0.0.8
 typing-inspect==0.4.0
 ujson==1.35
